--- a/app/views/supply_teachers/suppliers/neutral_vendors.html.erb
+++ b/app/views/supply_teachers/suppliers/neutral_vendors.html.erb
@@ -14,7 +14,7 @@
         <ul class="govuk-list govuk-list--bullet">
           <li>
             <%= t('.do_next.sign_form_html',
-                  form_url: 'https://ccs-agreements.cabinetoffice.gov.uk/sites/default/files/contracts/RM3826%20Supply%20Teachers%20-%20Order%20Form%20Template%20%28Full%20Version%29%20V1.docx',
+                  form_url: 'https://assets.crowncommercial.gov.uk/wp-content/uploads/RM3826-Order-form-template-full-version-V1.docx',
                   framework_url: 'https://ccs-agreements.cabinetoffice.gov.uk/contracts/rm3826') %>
           </li>
           <li>
