--- a/app/views/ccs_patterns/home/dynamic_accordian.html.erb
+++ b/app/views/ccs_patterns/home/dynamic_accordian.html.erb
@@ -16,7 +16,7 @@
 
 <!-- ccs pattern HTML starts below ... -->
 <div id="ccs-dynamic-accordian" class="govuk-grid-row">
-  <form action="" method="">
+  <form action="" method="" autocomplete="off">
 
     <section class="govuk-grid-column-two-thirds">
 
