--- a/app/views/management_consultancy/html/select_lot.html.erb
+++ b/app/views/management_consultancy/html/select_lot.html.erb
@@ -7,7 +7,7 @@
 
                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--m govuk-!-font-weight-bold">
                         <h1 class="govuk-fieldset__heading">
-                            Which area of your organisation needs advice?
+                            <%= t('.heading') %>
                         </h1>
                     </legend>
 
