--- a/app/views/management_consultancy/html/select_services.html.erb
+++ b/app/views/management_consultancy/html/select_services.html.erb
@@ -1,5 +1,5 @@
 <div id="ccs-dynamic-accordian" class="govuk-grid-row">
-  <form action="" method="">
+  <form action="" method="" autocomplete="off">
 
     <section class="govuk-grid-column-two-thirds">
 
@@ -9,7 +9,7 @@
 
       <div class="govuk-accordion" data-module="accordion" id="accordion-default">
 
-        <div class="govuk-accordion__section ">
+        <div class="govuk-accordion__section">
           <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
               <span class="govuk-accordion__section-button" id="accordion-default-heading-1">
@@ -52,7 +52,7 @@
 
           </div>
         </div>
-        <div class="govuk-accordion__section ">
+        <div class="govuk-accordion__section">
           <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
               <span class="govuk-accordion__section-button" id="accordion-default-heading-2">
@@ -80,7 +80,7 @@
 
           </div>
         </div>
-        <div class="govuk-accordion__section ">
+        <div class="govuk-accordion__section">
           <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
               <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
