FM initial lift pages and fix for drop index

--- a/app/views/facilities_management/buildings/_building_list.html.erb
+++ b/app/views/facilities_management/buildings/_building_list.html.erb
@@ -96,7 +96,7 @@
                     <%= values['description'] %>:
                   </div>
                   <div class="govuk-grid-column-three-quarters govuk-!-font-size-16">
-                    <%= values['uom_value'] %>
+                    <%= values['uom_value'] %>&nbsp;<%= values['unit_text'] %>
                   </div>
                 </div>
               <% end %>
