--- a/app/views/ccs_patterns/home/index.html.erb
+++ b/app/views/ccs_patterns/home/index.html.erb
@@ -15,6 +15,7 @@
         <li><a href="/ccs-patterns/titles-checkboxes">Titles with checkboxes</a></li>
         <li><a href="/ccs-patterns/numbered-pagination">Numbered pagination</a></li>
         <li><a href="/ccs-patterns/table-5050">5050 table</a></li>
+        <li><a href="/ccs-patterns/supplier-detail">Supplier detail table</a></li>
       </ul>
 
 
