--- a/app/views/apprenticeships/home/training_details.html.erb
+++ b/app/views/apprenticeships/home/training_details.html.erb
@@ -6,12 +6,12 @@
 
       <span class="govuk-caption-xl"><%= t('.training_provider_details_hint') %></span>
       <h1 class="govuk-heading-xl">
-        ABC Training LTD 
+        ABC Training LTD
         <span class="govuk-heading-s ccs-tag"><%= t('.national_provider_tag') %></span>
       </h1>
 
     </div>
-  </div> 
+  </div>
 
   <div class="govuk-grid-row">
     <section class="govuk-grid-column-two-thirds">
@@ -68,22 +68,22 @@
           <p class="govuk-body">University of the Year for Student Experience; latest Times and Sunday Times leaue table</p>
 
           <p class="govuk-body">Ranked No.13 UK University; Guardian university Guide 2019</p>
-          
+
           <p class="govuk-body">Gold for outstanding eaching and learning; Teaching Excellence Framework 2017</p>
-          
+
           <p class="govuk-body">ABC Training LTD apprenticeships are pleased to offer the opportunity to upskill employees with a range of higher and degree apprenticeships. These apprenticeshipsenable people of all ages to earn a wage while studying for a higher-level qualification.</p>
-          
+
           <p class="govuk-body">With ABC Training LTD, apprentices can gain professional qualifications as well as academic qualifications.</p>
 
           <h3 class="govuk-heading-m"><%= t('.other_apprenticeship_standards_title') %></h3>
-          
+
           <ul class="govuk-list govuk-list--bullet ccs-list-bullet--sm">
             <li><span>Construction Building: Woodmachining</span></li>
             <li><span>Construction Technical and Professional: Building Control</span></li>
             <li><span>Construction Building: Trowel Occupations</span></li>
             <li><span>Facilities Management: Building Services</span></li>
             <li><span>Building Service Engineering Installer</span></li>
-            <li><span>Building Services Engineering Ductwork Craftsperson</span></li>            
+            <li><span>Building Services Engineering Ductwork Craftsperson</span></li>
           </ul>
 
         </section>
@@ -112,7 +112,7 @@
               <tr class="govuk-table__row">
                 <th class="govuk-table__header" scope="row"><%= t('.duration_tbl') %></th>
                 <td class="govuk-table__cell">Yes</td>
-              </tr> 
+              </tr>
               <tr class="govuk-table__row">
                 <th class="govuk-table__header" scope="row"><%= t('.maximum_funding_tbl') %></th>
                 <td class="govuk-table__cell">Yes</td>
@@ -124,9 +124,9 @@
               <tr class="govuk-table__row">
                 <th class="govuk-table__header" scope="row"><%= t('.experience_in_this_apprenticeship_tbl') %></th>
                 <td class="govuk-table__cell">Yes</td>
-              </tr>                                         
+              </tr>
             </tbody>
-          </table>  
+          </table>
 
           <h3 class="govuk-heading-m"><%= t('.about_the_apprenticeship_title') %></h3>
 
@@ -136,7 +136,7 @@
 
           <ul class="ccs-checklist govuk-clearfix">
             <li><b><%= t('.time_demand_label') %>: </b>
-              
+
               <ul>
                 <li><span class="ccs-y">Yes:</span> day release</li>
                 <li><span class="ccs-y">Yes:</span> block release</li>
@@ -151,23 +151,23 @@
                     <div class="govuk-details__text">
                       <%= t('.time_demand_txt') %>
                     </div>
-                  </details>                
+                  </details>
                 </li>
               </ul>
 
             </li>
             <li><b><%= t('.delivery_method_label') %>: </b>
-              
+
               <ul>
                 <li><span class="ccs-y">Yes:</span> Classroom based</li>
                 <li><span class="ccs-y">Yes:</span> Online</li>
                 <li><span class="ccs-n">No:</span> Workplace based</li>
                 <li><span class="ccs-y">Yes:</span> Blended</li>
               </ul>
-              
+
             </li>
             <li><b><%= t('.classroom_sharing_label') %>: </b>
-              
+
               <ul>
                 <li><span class="ccs-n">No:</span> Open</li>
                 <li><span class="ccs-y">Yes:</span> Closed</li>
@@ -182,13 +182,13 @@
                     <div class="govuk-details__text">
                       <%= t('.classroom_sharing_txt') %>
                     </div>
-                  </details>                
+                  </details>
                 </li>
               </ul>
-              
-            </li> 
+
+            </li>
             <li><b><%= t('.training_availablity_label') %>: </b>
-              
+
               <ul>
                 <li><span class="ccs-n">No:</span> Open</li>
                 <li><span class="ccs-y">Yes:</span> Closed</li>
@@ -203,13 +203,13 @@
                     <div class="govuk-details__text">
                       <%= t('.training_availability_txt') %>
                     </div>
-                  </details>                
+                  </details>
                 </li>
               </ul>
-              
-            </li>                       
+
+            </li>
           </ul>
-          
+
         </section>
       </div>
 
@@ -222,7 +222,7 @@
       <div class="ccs-info-panel govuk-!-margin-top-8">
         <h3 class="govuk-heading-m"><%= t('.contact_details_title') %></h3>
 
-        <dl>
+        <dl class="ccs-contact-details">
           <dt><%= t('.email_title') %>:</dt>
           <dd><a href="mailto:emailaddress@websiteurl.ac.uk">emailaddress@websiteurl.ac.uk</a></dd>
           <dt><%= t('.phone_number_title') %>:</dt>
