--- a/app/views/ccs_patterns/home/supplier_detail.html.erb
+++ b/app/views/ccs_patterns/home/supplier_detail.html.erb
@@ -2,7 +2,9 @@
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-m">Supplier detail table</h1>
 
-        <p class="govuk-body"><b>Note</b> classes: .ccs-right-panel, .ccs-contact-details</p>
+        <p class="govuk-body"><b>Note</b> classes: .ccs-info-panel, .ccs-contact-details, .ccs-info-panel--pull-up</p>
+
+        <p><i>Optional class '.ccs-info-panel--pull-up' is to align page titles horizontally.</i></p>
 
     </div>
 </div>
@@ -75,7 +77,7 @@
     </div>
     <div class="govuk-grid-column-one-third">
 
-        <div class="ccs-right-panel">
+        <div class="ccs-info-panel ccs-info-panel--pull-up">
             <h3 class="govuk-heading-m">Contact details</h3>
 
             <dl class="ccs-contact-details">
