--- a/app/views/management_consultancy/html/select_services.html.erb
+++ b/app/views/management_consultancy/html/select_services.html.erb
@@ -156,7 +156,7 @@
         <%= submit_tag t('common.submit'), class: "govuk-button" %>
 
         <div>
-          <h3 class="govuk-heading-m" data-txt01="<%= t('.services_selected') %>" data-txt02="<%= t('.none_selected') %>"><span></span> <span></span></h3>
+          <h3 class="govuk-heading-m" data-txt01="<%= t('.services_selected') %>" data-txt02="<%= t('.no_services_selected') %>"><span></span> <span></span></h3>
           <a role="button" href="#" class="ccs-remove govuk-link--no-visited-state ccs-no-print" id="removeAll"><%= t('.remove_all') %></a>
           <ul class="govuk-list"></ul>
         </div>
