--- a/app/views/management_consultancy/html/supplier_detail.html.erb
+++ b/app/views/management_consultancy/html/supplier_detail.html.erb
@@ -59,7 +59,7 @@
     </div>
     <div class="govuk-grid-column-one-third">
 
-        <div class="ccs-right-panel">
+        <div class="ccs-info-panel ccs-info-panel--pull-up">
             <h3 class="govuk-heading-m"><%= t('.contact_details') %></h3>
 
             <dl class="ccs-contact-details">
