--- a/app/views/apprenticeships/home/index.html.erb
+++ b/app/views/apprenticeships/home/index.html.erb
@@ -20,7 +20,7 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><%= t('.belong_to_a_public_sector_organisation_html', url: 'https://www.gov.uk/guidance/list-a-teaching-job-at-your-school-on-teaching-vacancies') %>
-        <li><%= t('.have_an_account_with_Crown_Marketplace_html', url: 'https://www.gov.uk/guidance/list-a-teaching-job-at-your-school-on-teaching-vacancies') %>
+        <li><%= t('.have_an_account_with_Crown_Marketplace_html', url: 'https://www.gov.uk/guidance/list-a-teaching-job-at-your-school-on-teaching-vacancies') %></li>
         <li><%= t('.know_the_apprenticeship_standards') %></li>
         <li><%= t('.know_how_you_would_like_the_training_to_be_delivered') %></li>
         <li><%= t('.know_weather_you_would_like_shared_training') %></li>
